cdk.out/forums-stack.template.json
{
 "Resources": {
  "forumstableE10A93B1": {
   "Type": "AWS::DynamoDB::GlobalTable",
   "Properties": {
    "AttributeDefinitions": [
     {
      "AttributeName": "pk",
      "AttributeType": "S"
     }
    ],
    "BillingMode": "PAY_PER_REQUEST",
    "KeySchema": [
     {
      "AttributeName": "pk",
      "KeyType": "HASH"
     }
    ],
    "Replicas": [
     {
      "Region": "us-east-1"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-table/Resource"
   }
  },
  "forumsvpc465CF21D": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/Resource"
   }
  },
  "forumsvpcPublicSubnet1SubnetFA0CCE8F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet1/Subnet"
   }
  },
  "forumsvpcPublicSubnet1RouteTableE94EEFD0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet1/RouteTable"
   }
  },
  "forumsvpcPublicSubnet1RouteTableAssociationFF3AF7A6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "forumsvpcPublicSubnet1RouteTableE94EEFD0"
    },
    "SubnetId": {
     "Ref": "forumsvpcPublicSubnet1SubnetFA0CCE8F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "forumsvpcPublicSubnet1DefaultRoute44AB6596": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "forumsvpcIGWB3B00138"
    },
    "RouteTableId": {
     "Ref": "forumsvpcPublicSubnet1RouteTableE94EEFD0"
    }
   },
   "DependsOn": [
    "forumsvpcVPCGW4912E7AA"
   ],
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "forumsvpcPublicSubnet1EIPB01440BD": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet1/EIP"
   }
  },
  "forumsvpcPublicSubnet1NATGateway4B6DB25F": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "forumsvpcPublicSubnet1EIPB01440BD",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "forumsvpcPublicSubnet1SubnetFA0CCE8F"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "forumsvpcPublicSubnet1DefaultRoute44AB6596",
    "forumsvpcPublicSubnet1RouteTableAssociationFF3AF7A6"
   ],
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet1/NATGateway"
   }
  },
  "forumsvpcPublicSubnet2Subnet75F8A452": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet2/Subnet"
   }
  },
  "forumsvpcPublicSubnet2RouteTableEEC6A6C0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet2/RouteTable"
   }
  },
  "forumsvpcPublicSubnet2RouteTableAssociation741487A1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "forumsvpcPublicSubnet2RouteTableEEC6A6C0"
    },
    "SubnetId": {
     "Ref": "forumsvpcPublicSubnet2Subnet75F8A452"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "forumsvpcPublicSubnet2DefaultRouteFAEF30AD": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "forumsvpcIGWB3B00138"
    },
    "RouteTableId": {
     "Ref": "forumsvpcPublicSubnet2RouteTableEEC6A6C0"
    }
   },
   "DependsOn": [
    "forumsvpcVPCGW4912E7AA"
   ],
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "forumsvpcPublicSubnet2EIP029D3A99": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet2/EIP"
   }
  },
  "forumsvpcPublicSubnet2NATGatewayF3DDC799": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "forumsvpcPublicSubnet2EIP029D3A99",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "forumsvpcPublicSubnet2Subnet75F8A452"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "forumsvpcPublicSubnet2DefaultRouteFAEF30AD",
    "forumsvpcPublicSubnet2RouteTableAssociation741487A1"
   ],
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet2/NATGateway"
   }
  },
  "forumsvpcPublicSubnet3Subnet61179BD4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet3/Subnet"
   }
  },
  "forumsvpcPublicSubnet3RouteTableA723502A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet3/RouteTable"
   }
  },
  "forumsvpcPublicSubnet3RouteTableAssociation94C3894C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "forumsvpcPublicSubnet3RouteTableA723502A"
    },
    "SubnetId": {
     "Ref": "forumsvpcPublicSubnet3Subnet61179BD4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet3/RouteTableAssociation"
   }
  },
  "forumsvpcPublicSubnet3DefaultRoute1B9D8722": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "forumsvpcIGWB3B00138"
    },
    "RouteTableId": {
     "Ref": "forumsvpcPublicSubnet3RouteTableA723502A"
    }
   },
   "DependsOn": [
    "forumsvpcVPCGW4912E7AA"
   ],
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet3/DefaultRoute"
   }
  },
  "forumsvpcPublicSubnet3EIP95782367": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet3/EIP"
   }
  },
  "forumsvpcPublicSubnet3NATGatewayDAAC710D": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "forumsvpcPublicSubnet3EIP95782367",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "forumsvpcPublicSubnet3Subnet61179BD4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PublicSubnet3"
     }
    ]
   },
   "DependsOn": [
    "forumsvpcPublicSubnet3DefaultRoute1B9D8722",
    "forumsvpcPublicSubnet3RouteTableAssociation94C3894C"
   ],
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PublicSubnet3/NATGateway"
   }
  },
  "forumsvpcPrivateSubnet1Subnet281E31A6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PrivateSubnet1/Subnet"
   }
  },
  "forumsvpcPrivateSubnet1RouteTableAC057314": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PrivateSubnet1/RouteTable"
   }
  },
  "forumsvpcPrivateSubnet1RouteTableAssociation5FD99C95": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "forumsvpcPrivateSubnet1RouteTableAC057314"
    },
    "SubnetId": {
     "Ref": "forumsvpcPrivateSubnet1Subnet281E31A6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "forumsvpcPrivateSubnet1DefaultRoute75B447F4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "forumsvpcPublicSubnet1NATGateway4B6DB25F"
    },
    "RouteTableId": {
     "Ref": "forumsvpcPrivateSubnet1RouteTableAC057314"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "forumsvpcPrivateSubnet2SubnetC3156A80": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PrivateSubnet2/Subnet"
   }
  },
  "forumsvpcPrivateSubnet2RouteTable130A7863": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PrivateSubnet2/RouteTable"
   }
  },
  "forumsvpcPrivateSubnet2RouteTableAssociation56D90FEA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "forumsvpcPrivateSubnet2RouteTable130A7863"
    },
    "SubnetId": {
     "Ref": "forumsvpcPrivateSubnet2SubnetC3156A80"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "forumsvpcPrivateSubnet2DefaultRouteEDFA05CA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "forumsvpcPublicSubnet2NATGatewayF3DDC799"
    },
    "RouteTableId": {
     "Ref": "forumsvpcPrivateSubnet2RouteTable130A7863"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "forumsvpcPrivateSubnet3Subnet6ECD3143": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PrivateSubnet3/Subnet"
   }
  },
  "forumsvpcPrivateSubnet3RouteTableA68659F4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PrivateSubnet3/RouteTable"
   }
  },
  "forumsvpcPrivateSubnet3RouteTableAssociationA6D4C18E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "forumsvpcPrivateSubnet3RouteTableA68659F4"
    },
    "SubnetId": {
     "Ref": "forumsvpcPrivateSubnet3Subnet6ECD3143"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "forumsvpcPrivateSubnet3DefaultRouteAC7D5B4C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "forumsvpcPublicSubnet3NATGatewayDAAC710D"
    },
    "RouteTableId": {
     "Ref": "forumsvpcPrivateSubnet3RouteTableA68659F4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/PrivateSubnet3/DefaultRoute"
   }
  },
  "forumsvpcIGWB3B00138": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/IGW"
   }
  },
  "forumsvpcVPCGW4912E7AA": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "forumsvpcIGWB3B00138"
    },
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/VPCGW"
   }
  },
  "forumsvpcRestrictDefaultSecurityGroupCustomResourceE01E8962": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "forumsvpc465CF21D",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "525122308447"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:525122308447:security-group/",
             {
              "Fn::GetAtt": [
               "forumsvpc465CF21D",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-525122308447-us-east-1",
     "S3Key": "ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs18.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "forums-stack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a",
    "aws:asset:property": "Code"
   }
  },
  "forumsclusterA490585E": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-cluster/Resource"
   }
  },
  "forumsserviceLB541964D1": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "forumsserviceLBSecurityGroup08B87BBC",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "forumsvpcPublicSubnet1SubnetFA0CCE8F"
     },
     {
      "Ref": "forumsvpcPublicSubnet2Subnet75F8A452"
     },
     {
      "Ref": "forumsvpcPublicSubnet3Subnet61179BD4"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "forumsvpcPublicSubnet1DefaultRoute44AB6596",
    "forumsvpcPublicSubnet1RouteTableAssociationFF3AF7A6",
    "forumsvpcPublicSubnet2DefaultRouteFAEF30AD",
    "forumsvpcPublicSubnet2RouteTableAssociation741487A1",
    "forumsvpcPublicSubnet3DefaultRoute1B9D8722",
    "forumsvpcPublicSubnet3RouteTableAssociation94C3894C"
   ],
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/LB/Resource"
   }
  },
  "forumsserviceLBSecurityGroup08B87BBC": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB forumsstackforumsserviceLB030C1E09",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 443",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/LB/SecurityGroup/Resource"
   }
  },
  "forumsserviceLBSecurityGrouptoforumsstackforumsserviceServiceSecurityGroup147B65C680FD23D27E": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "forumsserviceServiceSecurityGroup85F8B4EF",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "forumsserviceLBSecurityGroup08B87BBC",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/LB/SecurityGroup/to forumsstackforumsserviceServiceSecurityGroup147B65C6:80"
   }
  },
  "forumsserviceLBPublicListener389766B8": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "Certificates": [
     {
      "CertificateArn": {
       "Ref": "forumsserviceCertificate42DA010B"
      }
     }
    ],
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "forumsserviceLBPublicListenerECSGroup02FDA60B"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "forumsserviceLB541964D1"
    },
    "Port": 443,
    "Protocol": "HTTPS"
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/LB/PublicListener/Resource"
   }
  },
  "forumsserviceLBPublicListenerECSGroup02FDA60B": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "forumsserviceLBPublicRedirectListener1A096B1F": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "RedirectConfig": {
       "Port": "443",
       "Protocol": "HTTPS",
       "StatusCode": "HTTP_301"
      },
      "Type": "redirect"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "forumsserviceLB541964D1"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/LB/PublicRedirectListener/Resource"
   }
  },
  "forumsserviceCertificate42DA010B": {
   "Type": "AWS::CertificateManager::Certificate",
   "Properties": {
    "DomainName": "acjensen-desktop.com",
    "DomainValidationOptions": [
     {
      "DomainName": "acjensen-desktop.com",
      "HostedZoneId": "Z04120322C14IQFE0SPTY"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "forums-stack/forums-service/Certificate"
     }
    ],
    "ValidationMethod": "DNS"
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/Certificate/Resource"
   }
  },
  "forumsserviceDNSC967D01D": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "AliasTarget": {
     "DNSName": {
      "Fn::Join": [
       "",
       [
        "dualstack.",
        {
         "Fn::GetAtt": [
          "forumsserviceLB541964D1",
          "DNSName"
         ]
        }
       ]
      ]
     },
     "HostedZoneId": {
      "Fn::GetAtt": [
       "forumsserviceLB541964D1",
       "CanonicalHostedZoneID"
      ]
     }
    },
    "HostedZoneId": "Z04120322C14IQFE0SPTY",
    "Name": "acjensen-desktop.com.",
    "Type": "A"
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/DNS/Resource"
   }
  },
  "forumsserviceTaskDefTaskRoleF44F7872": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/TaskDef/TaskRole/Resource"
   }
  },
  "forumsserviceTaskDefB2B7A48D": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": {
       "Fn::Sub": "525122308447.dkr.ecr.us-east-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-525122308447-us-east-1:a402847845a76fecdc2a16e30f6061044e660bc49a74b9ba2764e4c925f7c837"
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "forumsserviceTaskDefforumscontainerLogGroup9969C101"
        },
        "awslogs-stream-prefix": "forums-service",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "forums-container",
      "PortMappings": [
       {
        "ContainerPort": 80,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "forumsserviceTaskDefExecutionRoleA174C423",
      "Arn"
     ]
    },
    "Family": "forumsstackforumsserviceTaskDefA82A1AF2",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "RuntimePlatform": {
     "CpuArchitecture": "ARM64",
     "OperatingSystemFamily": "LINUX"
    },
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "forumsserviceTaskDefTaskRoleF44F7872",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/TaskDef/Resource"
   }
  },
  "forumsserviceTaskDefforumscontainerLogGroup9969C101": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/TaskDef/forums-container/LogGroup/Resource"
   }
  },
  "forumsserviceTaskDefExecutionRoleA174C423": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/TaskDef/ExecutionRole/Resource"
   }
  },
  "forumsserviceTaskDefExecutionRoleDefaultPolicyA320F2D3": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": "arn:aws:ecr:us-east-1:525122308447:repository/cdk-hnb659fds-container-assets-525122308447-us-east-1"
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "forumsserviceTaskDefforumscontainerLogGroup9969C101",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "forumsserviceTaskDefExecutionRoleDefaultPolicyA320F2D3",
    "Roles": [
     {
      "Ref": "forumsserviceTaskDefExecutionRoleA174C423"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "forumsserviceService7D5EC485": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "forumsclusterA490585E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "forums-container",
      "ContainerPort": 80,
      "TargetGroupArn": {
       "Ref": "forumsserviceLBPublicListenerECSGroup02FDA60B"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "forumsserviceServiceSecurityGroup85F8B4EF",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "forumsvpcPrivateSubnet1Subnet281E31A6"
       },
       {
        "Ref": "forumsvpcPrivateSubnet2SubnetC3156A80"
       },
       {
        "Ref": "forumsvpcPrivateSubnet3Subnet6ECD3143"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "forumsserviceTaskDefB2B7A48D"
    }
   },
   "DependsOn": [
    "forumsserviceLBPublicListenerECSGroup02FDA60B",
    "forumsserviceLBPublicListener389766B8",
    "forumsserviceTaskDefTaskRoleF44F7872"
   ],
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/Service/Service"
   }
  },
  "forumsserviceServiceSecurityGroup85F8B4EF": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "forums-stack/forums-service/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "forumsvpc465CF21D"
    }
   },
   "DependsOn": [
    "forumsserviceTaskDefTaskRoleF44F7872"
   ],
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/Service/SecurityGroup/Resource"
   }
  },
  "forumsserviceServiceSecurityGroupfromforumsstackforumsserviceLBSecurityGroup1463AF8180DE522890": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "forumsserviceServiceSecurityGroup85F8B4EF",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "forumsserviceLBSecurityGroup08B87BBC",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "DependsOn": [
    "forumsserviceTaskDefTaskRoleF44F7872"
   ],
   "Metadata": {
    "aws:cdk:path": "forums-stack/forums-service/Service/SecurityGroup/from forumsstackforumsserviceLBSecurityGroup1463AF81:80"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31STW/bMAz9Lb2rWptgu6dpFwQoNsMucg1omfHYyJIh0gkCw/99kJzEWVvsxMfHR/FDnOnH+Vw/3MGR7021v7dU6r4QMHsFR9721clB46tS929QWtzM1HLnVtaXYBMxKDQz3W9aEwObbKmyrrRkiq50KJGbUO47wZQ18RO3YPaGQMi7qziCl3UWzS+QFQge4aSyQAcQnB5eO8Hg8CoYOzl7CxEwfxp0ogo0XSA5rYLv2tTDf4mXOiDzJ3rtEh8nZ90vbceCIaou8CeEGuJUvH/GHTm6zPSR8U6AHIYb7pxbYDiQGfc0wlgubIEZhfWzN3sM6wbquDaUGNM5tp5JfDg9AWPsbtuCxM2wXrStJZOW++qhegILzmD1oRpaYCFjPVRlUpCrDzPdf52dZv7Hv9URC7qz5oJv4m8QapTr3m/cQRkMQrsoxAYc1Bh0v5y4tOrJHVSIp [...]
   },
   "Metadata": {
    "aws:cdk:path": "forums-stack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "forumsserviceLoadBalancerDNSC51ABCA2": {
   "Value": {
    "Fn::GetAtt": [
     "forumsserviceLB541964D1",
     "DNSName"
    ]
   }
  },
  "forumsserviceServiceURLEE217091": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://",
      {
       "Ref": "forumsserviceDNSC967D01D"
      }
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
